# Passero

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  test.yml
Casks/: passero.rb
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  path.rs
src-tauri/src/config/: commands.rs  model.rs
src-tauri/src/git/: commands.rs
src-tauri/src/gpg/: commands.rs
src-tauri/src/pass/: commands.rs  store.rs
src-tauri/src/totp/: commands.rs
src/components/: EmptyStoreSetup.svelte  PasswordEditor.svelte  PasswordGenerator.svelte  PasswordTree.svelte  PasswordTreeNode.svelte  PasswordViewer.svelte  SearchBar.svelte  Sidebar.svelte  StoreRecipients.svelte  Toolbar.svelte  TotpDisplay.svelte  TotpImport.svelte  VaultSwitcher.svelte
src/lib/: commands.ts  types.ts  utils.ts
src/lib/stores/: passwords.svelte.ts  settings.svelte.ts  ui.svelte.ts
src/views/: GeneratorView.svelte  GpgView.svelte  MainView.svelte  SettingsView.svelte
