[package]
name = "passero"
version = "0.0.0"
description = "A password-store GUI built with Tauri"
authors = ["fredsmith"]
license = "MIT"
repository = "https://github.com/fredsmith/Passero"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "passero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs"] }
thiserror = "2"
dirs = "6"
log = "0.4"
totp-rs = { version = "5", features = ["otpauth"] }
url = "2"
urlencoding = "2"
image = "0.25"
rqrr = "0.9"
